--- a/LinkVibrationGlove/platformio.ini
+++ b/LinkVibrationGlove/platformio.ini
@@ -8,9 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[common_env_data]
+build_flags= 
+    -I include
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
-
 monitor_speed = 115200
+build_flags = ${common_env_data.build_flags}
